--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,3 +14,5 @@ Imports:
 Suggests: 
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
+URL: https://github.com/ShebaniBhattarai/praiseme
+BugReports: https://github.com/ShebaniBhattarai/praiseme/issues
